--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,7 +35,7 @@
                 <h2>Community Sports</h2>
                 <p>Explore our photo gallery of a vibrant sports community that celebrates victories and fosters camaraderie. Diverse teams,
                     thrilling matches, and dynamic events define us.</p>
-                    <a class="btn btn-outline-success btn-lg" href="{% url 'sports' %}" role="button">Sports</a>
+                    <a class="btn btn-outline-success btn-lg" href="#" role="button">Sports</a>
             </div>
         </div>
         <div class="col-md-6">
