--- a/app/templates/founders.html
+++ b/app/templates/founders.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block title %}Patrons{% endblock %}
 
@@ -9,14 +10,14 @@
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">અમારા આશ્રયદાતા</h1>
-                <p class="lead text-body-secondary">અમારા સ્થાપકોના પૃષ્ઠ પર આપનું સ્વાગત છે, જે અગ્રણી દિમાગને શ્રદ્ધાંજલિ છે
-                    અમારા માર્ગને પ્રજ્વલિત કર્યો. તેમની સામૂહિક દ્રષ્ટિ અને હિંમત દ્વારા, તેઓએ પાયાના પથ્થરની સ્થાપના કરી
-                    અમારી સંસ્થાની સફળતા. તેમના પોટ્રેટ તેમના સમર્પણ અને નવીનતાના સારને કેપ્ચર કરે છે.
-                    પડકારોમાંથી સ્થિતિસ્થાપકતા ઉભરી, તેમના વિચારોથી અમારી સફર ખીલી. આજે, અમે તેમના પર ઊભા છીએ
-                    ખભા, તેમની ભાવના દ્વારા માર્ગદર્શન આપે છે, કારણ કે આપણે વિકાસ અને પ્રેરણા કરવાનું ચાલુ રાખીએ છીએ. આ સ્થાપકો છે
-                    અમારી વાર્તાનું હૃદય, અમારા વારસાના આર્કિટેક્ટ. તેમનો વારસો દરેક સિદ્ધિમાં જીવે છે, અને
-                    તેમનો પ્રભાવ આપણા ભવિષ્યને બળ આપે છે.</p>
+                <h1 class="fw-light">{% trans 'Our Founders'%}</h1>
+                <p class="lead text-body-secondary">{% blocktrans %}Welcometothepage dedicated to our founders, who are the
+                    cornerstone of our organization. Their collective vision and courage have paved our way to success.
+                    Their portraits capture their dedication and innovation. Emerging from the backdrop, their
+                    leadership has elevated our journey. Today, we stand on their shoulders, guided by their spirit, as
+                    we continue to drive progress and inspiration. These founders are the heart of our story, architects
+                    of our legacy. Their legacy lives on in every achievement, and their impact strengthens our future.{% endblocktrans %}
+                </p>
 
             </div>
         </div>
@@ -27,14 +28,14 @@
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
                 {% for founder in founders %}
-                    <div class="col">
-                        <div class="card shadow-lg bg-body-tertiary rounded">
-                            <a href="{% url 'founderbio' founder.id %}">
-                                <img src="{{ founder.image.url }}" alt="{{ founder.name }}" class="card-img-top" width="300"
+                <div class="col">
+                    <div class="card shadow-lg bg-body-tertiary rounded">
+                        <a href="{% url 'founderbio' founder.id %}">
+                            <img src="{{ founder.image.url }}" alt="{{ founder.name }}" class="card-img-top" width="300"
                                 height="400">
-                            </a>
-                        </div>
+                        </a>
                     </div>
+                </div>
                 {% endfor %}
             </div>
         </div>
