--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,17 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="{% static 'css/animate.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <style>
+        .material-symbols-outlined {
+          font-variation-settings:
+          'FILL' 1,
+          'wght' 700,
+          'GRAD' 0,
+          'opsz' 40
+        }
+    </style>
 
 </head>
 
@@ -88,7 +98,7 @@
                 
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
                     <div class="dropdown">
-                      <button class="btn btn-outline-success dropdown-toggle" type="button" id="languageDropdown"
+                      <button class="btn btn-outline-success dropdown-toggle p-1" type="button" id="languageDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         {{ lang_name }}{% trans 'Lang' %}
                       </button>
